update consistent dependencies across cbomkit
Signed-off-by: Shubham Kumar <chmodshubham@gmail.com>